# rumor-detector

./: .gitignore  README.md  config-example.py  pyproject.toml
data/articles/: article1.txt  article2.txt
rumor/: crawler.py  ingest.py  query.py
