[project]
name = "rumor"
version = "0.1.0"
description = "rumor detector with RAG"
authors = [
    {name = "Zoey Zuo",email = "zoeyzuouk@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "openai (>=1.70.0,<2.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "azure-search-documents (>=11.5.2,<12.0.0)",
    "azure-identity (>=1.21.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
